--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -25,8 +25,11 @@
   editable: false
   edit_questions: true
   questions:
+    - serviceAddOn
+    - cloudDeploymentModel
     - serviceConstraints
     - buyerResponsibilities
+    - systemRequirements
 -
   name: Reselling
   editable: false
@@ -56,6 +59,7 @@
   editable: false
   edit_questions: true
   questions:
+    - supportedBrowsers
     - webInterface
     - webInterfaceAccessibilityStandards
     - API
@@ -64,6 +68,7 @@
     - commandLineInterface
     - commandLineOS
     - usingTheCommandLineInterface
+    - customise
 
 -
   name: Analytics
