Updates to g9 questions from Kev's comments.
* Added newlines to end of all files.
* Moved 'optional: true' higher up in the files
* Used smart quotes rather than normal apostrophes.
* Added 200-word limit hints and validations to all text boxes; to be reduced later if necessary.
* Misc. other small changes
* Make all checkbox-type questions optional

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -4,10 +4,14 @@
   questions:
     - lotName
 -
-  name: About your service
+  name: Service name
   editable: true
   questions:
     - serviceName
+-
+  name: About your service
+  editable: true
+  questions:
     - serviceDescription
     - serviceCategoriesSoftware
     - serviceCategoriesHosting
