--- a/frameworks/g-cloud-9/questions/services/accessRestrictionsManagementAndSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/accessRestrictionsManagementAndSupport.yml
@@ -1,5 +1,6 @@
 name: Access restrictions in management interfaces and support channels
 question: Describe how you restrict access in management interfaces and support channels.
+hint: "200-word limit"
 type: textbox_large
 depends:
   -
@@ -11,3 +12,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
