--- a/frameworks/g-cloud-9/questions/services/dataProtectionWithinSuppliersNetwork.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionWithinSuppliersNetwork.yml
@@ -1,5 +1,6 @@
 name: "Data protection within the supplier's network"
 question: "How do you protect data within your network?"
+optional: true
 depends:
   -
     "on": lot
@@ -17,8 +18,3 @@ options:
         label: "IPsec or TLS VPN gateway"
     -
         label: "Legacy SSL and TLS (under 1.2)"
-
-validations:
-  -
-    name: answer_required
-    message: "You need to answer this question."
