--- a/frameworks/g-cloud-9/questions/services/howLongIsAuditDataStoredFor.yml
+++ b/frameworks/g-cloud-9/questions/services/howLongIsAuditDataStoredFor.yml
@@ -1,4 +1,4 @@
-name: "How long audit data's stored for"
+name: "How long is audit data stored for"
 question: "How long do you store audit data for?"
 depends:
   -
