--- a/frameworks/g-cloud-9/questions/services/otherNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/otherNetworks.yml
@@ -1,6 +1,6 @@
 name: "Other networks"
 question: "Can your service be connected to any other networks?"
-question_advice: "Say 'yes' if you can connect to a private WAN."
+question_advice: "Say ’yes’ if you can connect to a private WAN."
 depends:
   -
     "on": lot
