--- a/frameworks/g-cloud-9/questions/services/serviceCategoriesSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceCategoriesSupport.yml
@@ -1,12 +1,13 @@
 id: serviceCategories
 name: 'Service categories'
 question: 'Which categories does your service fit under?'
+hint: 'You can choose multiple categories.'
+optional: true
 depends:
   -
     "on": lot
     being:
       - cloud-support
-hint: 'You can choose multiple categories.'
 type: checkboxes
 options:
   -
@@ -16,7 +17,3 @@ options:
     label: '...all funky and new'
     value: support_category_two
     description: A huge expandable tree that rules from the centre of the ultraworld
-validations:
-  -
-    name: answer_required
-    message: 'You need to answer this question.'
