--- a/frameworks/g-cloud-9/questions/services/usingTheCommandLineInterface.yml
+++ b/frameworks/g-cloud-9/questions/services/usingTheCommandLineInterface.yml
@@ -6,7 +6,7 @@ question_advice: >
       - how users can set up the service through the command line interface
       - how users can make changes through the command line
       - any limitations to how users can set up or make changes through the command line
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -19,3 +19,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
