--- a/frameworks/g-cloud-9/questions/services/approachToResilience.yml
+++ b/frameworks/g-cloud-9/questions/services/approachToResilience.yml
@@ -1,7 +1,7 @@
 name: "Approach to resilience"
 question: "Describe how your service is designed to be resilient?"
 question_advice: "Include how your datacentre setup is resilient. If you don't want to make this information public, you can say that it's available on request."
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -15,3 +15,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your description must be no more than 200 words."
+  -
+    name: under_character_limit
+    message: "Your description must be no more than 2000 characters."
