--- a/frameworks/g-cloud-9/questions/services/backupLocations.yml
+++ b/frameworks/g-cloud-9/questions/services/backupLocations.yml
@@ -1,5 +1,6 @@
 name: "Backup locations"
 question: "Where can the service back up to?"
+optional: true
 depends:
   -
     "on": lot
@@ -9,13 +10,8 @@ depends:
 type: checkboxes
 options:
     -
-        label: "Single, onsite location"
+      label: "Secure, offsite locations"
     -
-        label: "Multiple, onsite locations"
+      label: "Multiple, onsite locations"
     -
-        label: "Secure, offsite locations"
-
-validations:
-  -
-    name: answer_required
-    message: "You need to answer this question."
+      label: "Single, onsite location"
