--- a/frameworks/g-cloud-9/questions/services/dataExportHow.yml
+++ b/frameworks/g-cloud-9/questions/services/dataExportHow.yml
@@ -1,8 +1,19 @@
 name: Data export description
 question: How do users export their data?
+hint: "200-word limit"
 depends:
   -
     "on": lot
     being:
       - cloud-software
 type: textbox_large
+validations:
+  -
+    name: answer_required
+    message: "You must answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
