--- a/frameworks/g-cloud-9/questions/services/dataSanitisationApproach.yml
+++ b/frameworks/g-cloud-9/questions/services/dataSanitisationApproach.yml
@@ -1,6 +1,6 @@
 name: "Data sanitisation approach"
 question: "Describe your data sanitisation process"
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -14,3 +14,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
