--- a/frameworks/g-cloud-9/questions/services/devicesForManagement.yml
+++ b/frameworks/g-cloud-9/questions/services/devicesForManagement.yml
@@ -3,6 +3,13 @@ question: Through which devices do users manage the service?
 question_advice: >
   Read about the [https://www.ncsc.gov.uk/guidance/systems-administration-architectures](systems administration models) that can be used to design the
   administration approach for IT systems.
+optional: true
+depends:
+  -
+    "on": lot
+    being:
+      - cloud-hosting
+      - cloud-software
 type: checkboxes
 options:
   - label: Dedicated device on a segregated network (providers own provision)
@@ -14,9 +21,3 @@ options:
       network such as the internet
   - label: Directly from any device which may also be used for normal business
     description: For example web browsing or viewing external email
-depends:
-  -
-    "on": lot
-    being:
-      - cloud-hosting
-      - cloud-software
