--- a/frameworks/g-cloud-9/questions/services/endOfContractDataExtraction.yml
+++ b/frameworks/g-cloud-9/questions/services/endOfContractDataExtraction.yml
@@ -1,6 +1,6 @@
 name: "End-of-contract data extraction"
 question: "How do users extract their data when the contract ends?"
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -14,3 +14,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
