--- a/frameworks/g-cloud-9/questions/services/guaranteedAvailability.yml
+++ b/frameworks/g-cloud-9/questions/services/guaranteedAvailability.yml
@@ -1,7 +1,7 @@
 name: "Guaranteed availability"
 question: "Describe the level of availability you guarantee."
 question_advice: "Include any service level agreements (SLAs) you have for availability and how users are refunded if you don't meet guaranteed levels of availability."
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -15,3 +15,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
