--- a/frameworks/g-cloud-9/questions/services/incidentManagementApproach.yml
+++ b/frameworks/g-cloud-9/questions/services/incidentManagementApproach.yml
@@ -1,5 +1,6 @@
 name: "Incident management approach"
 question: "Describe your incident management processes."
+hint: "200-word limit"
 question_advice: >
     Include:
 
@@ -19,3 +20,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
