--- a/frameworks/g-cloud-9/questions/services/informationSecurityPoliciesAndProcesses.yml
+++ b/frameworks/g-cloud-9/questions/services/informationSecurityPoliciesAndProcesses.yml
@@ -1,7 +1,7 @@
 name: "Information security policies and processes"
 question: "What information security policies and processes do you follow?"
 question_advice: "Include your reporting structure and how you ensure policies are followed."
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -15,3 +15,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
