--- a/frameworks/g-cloud-9/questions/services/outageReporting.yml
+++ b/frameworks/g-cloud-9/questions/services/outageReporting.yml
@@ -1,12 +1,12 @@
 name: "Outage reporting"
 question: "How does your service report any outages?"
 question_advice: >
-    Include if there's:
+    Include if there’s:
 
       - a public dashboard
       - an API
       - email alerts
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -20,3 +20,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
