--- a/frameworks/g-cloud-9/questions/services/resellerRelationship.yml
+++ b/frameworks/g-cloud-9/questions/services/resellerRelationship.yml
@@ -1,7 +1,7 @@
 name: "Reseller relationship"
 question: "Describe your relationship with the supplier whose services you're reselling."
 question_advice: "Include whether the buyer maintains control over the service and what value you add to the existing service."
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -15,3 +15,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
