--- a/frameworks/g-cloud-9/questions/services/scalingApproach.yml
+++ b/frameworks/g-cloud-9/questions/services/scalingApproach.yml
@@ -1,7 +1,8 @@
 name: "Scaling approach"
 question: "Describe how your service scales."
 question_advice: "Include the conditions that make your service scale up or down and how users can change them."
-hint: "x-word limit"
+hint: "200-word limit"
+optional: true
 depends:
   -
     "on": lot
@@ -10,4 +11,13 @@ depends:
 
 type: textbox_large
 
-optional: true
+validations:
+  -
+    name: answer_required
+    message: "You need to answer this questions."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
