--- a/frameworks/g-cloud-9/questions/services/scalingReporting.yml
+++ b/frameworks/g-cloud-9/questions/services/scalingReporting.yml
@@ -1,5 +1,6 @@
 name: "Scaling reporting"
 question: "How are users notified of scaling changes?"
+optional: true
 depends:
   -
     "on": lot
@@ -16,8 +17,3 @@ options:
         label: "SMS"
     -
         label: "Other"
-
-validations:
-  -
-    name: answer_required
-    message: "You need to answer this question."
