--- a/frameworks/g-cloud-9/questions/services/scalingType.yml
+++ b/frameworks/g-cloud-9/questions/services/scalingType.yml
@@ -1,5 +1,6 @@
 name: "Scaling type"
 question: "How does your service scale?"
+optional: true
 depends:
   -
     "on": lot
@@ -15,9 +16,4 @@ options:
     -
         label: "Users have to contact the support team to scale"
     -
-        label: "Doesn't scale"
-
-validations:
-  -
-    name: answer_required
-    message: "You need to answer this question."
+        label: "Doesn’t scale"
