--- a/frameworks/g-cloud-9/questions/services/serviceScopeAddOn.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceScopeAddOn.yml
@@ -1,5 +1,6 @@
 name: Add-ons and extensions
 question: Is your service an add-on or extension to other software services?
+optional: true
 depends:
   -
     "on": lot
@@ -15,9 +16,3 @@ options:
     label: "Yes, but can also be used as a standalone service"
   -
     label: "No"
-
-validations:
-  -
-    name: answer_required
-    message: 'You need to answer this question.'
-
