--- a/frameworks/g-cloud-9/questions/services/supportLevels.yml
+++ b/frameworks/g-cloud-9/questions/services/supportLevels.yml
@@ -6,7 +6,7 @@ question_advice: >
       - the support levels you provide
       - how much the different support levels you provide cost
       - whether you provide a technical account manager or cloud support engineer
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -20,3 +20,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
