--- a/frameworks/g-cloud-9/questions/services/supportResponseTimes.yml
+++ b/frameworks/g-cloud-9/questions/services/supportResponseTimes.yml
@@ -1,7 +1,7 @@
 name: "Support response times"
 question: "How quickly do you respond to questions?"
 question_advice: "Say if response times are different at weekends"
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -15,3 +15,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
