--- a/frameworks/g-cloud-9/questions/services/supportedBrowsers.yml
+++ b/frameworks/g-cloud-9/questions/services/supportedBrowsers.yml
@@ -1,5 +1,7 @@
 name: Supported browsers
 question: 'What browsers does your service work with?'
+hint: 'Choose all that apply.'
+optional: true
 depends:
   -
     "on": lot
@@ -7,7 +9,6 @@ depends:
       - cloud-hosting
       - cloud-software
       - cloud-support
-hint: 'Choose all that apply.'
 type: checkboxes
 options:
     -
@@ -30,8 +31,3 @@ options:
         label: Safari
     -
         label: Opera
-validations:
-  -
-    name: answer_required
-    message: 'You need to answer this question.'
-
