--- a/frameworks/g-cloud-9/questions/services/usingTheAPI.yml
+++ b/frameworks/g-cloud-9/questions/services/usingTheAPI.yml
@@ -1,12 +1,12 @@
 name: "Using the API"
-question: "Describe what users can and can't do using your API."
+question: "Describe what users can and can’t do using your API."
 question_advice: >
     Include:
 
       - how users can set up the service through the API
       - how users can make changes through the API
       - any limitations to how users can set up or make changes through the API
-hint: "x-word limit"
+hint: "200-word limit"
 depends:
   -
     "on": lot
@@ -20,3 +20,9 @@ validations:
   -
     name: answer_required
     message: "You need to answer this question."
+  -
+    name: under_200_words
+    message: "Your answer must be no longer than 200 words."
+  -
+    name: under_character_limit
+    message: "Your answer must be no longer than 2,000 characters."
