--- a/frameworks/digital-outcomes-and-specialists-2/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/output_brief_response.yml
@@ -2,8 +2,8 @@
   name: View response to requirements
   questions:
     - supplierName
-    - availabilityOutcomes
-    - availabilitySpecialists
-    - dayRate
-    - niceToHaveRequirements
     - respondToEmailAddress
+    - availability
+    - dayRate
+    - essentialRequirements
+    - niceToHaveRequirements
