--- a/frameworks/digital-outcomes-and-specialists-2/manifests/display_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/display_brief_response.yml
@@ -10,6 +10,5 @@
   name: Your details
   questions:
     - dayRate
-    - availabilityOutcomes
-    - availabilitySpecialists
+    - availability
     - respondToEmailAddress
