--- a/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/respondToEmailAddress.yml
@@ -1,17 +1,9 @@
 name: Email address
 question: Email address the buyer should use to contact you
-hint: All communication about your application will be sent to this address.
-
+question_advice: All communication about your application will be sent to this address.
 type: text
 limits:
   format: email
-
-depends:
-  - "on": "lot"
-    being:
-      - digital-outcomes
-      - digital-specialists
-      - user-research-participants
 
 validations:
   - name: answer_required
