Add missing G9 question keys / data

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -68,7 +68,7 @@
     - commandLineInterface
     - commandLineOS
     - usingTheCommandLineInterface
-    - customise
+    - customisation
 
 -
   name: Analytics
