--- a/frameworks/g-cloud-9/questions/services/serviceAddOn.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceAddOn.yml
@@ -1,4 +1,6 @@
+question: Add-ons and extensions
 name: Add-ons and extensions
+type: multiquestion
 questions:
  - serviceAddOnType
  - serviceAddOnDetails
