--- a/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
+++ b/frameworks/g-cloud-9/questions/services/cloudDeploymentModel.yml
@@ -1,4 +1,5 @@
-hint: 'Is the service a public, private, community or hybrid cloud service?'
+name: 'Cloud deployment model'
+question: 'Is the service a public, private, community or hybrid cloud service?'
 depends:
   -
     "on": lot
@@ -20,4 +21,3 @@ validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
-question: 'Cloud deployment model'
